--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <script>
         window.onload = function() {
           let BASE_DOMAIN = window.location.origin;
-          document.getElementsByName('redirectTo')[0].value = `${BASE_DOMAIN}/site.kamylla/obrigada.html`;
+          document.getElementsByName('redirectTo')[0].value = `${BASE_DOMAIN}/obrigada.html`;
         }
       </script>
 </head>
